--- a/style.css
+++ b/style.css
@@ -279,3 +279,102 @@ section{
     min-height: 90vh;
 
 }
+
+.footer_wrapper {
+    background: url(footer.png) no-repeat top center;
+    background-size: cover;
+    padding-top: 15rem;
+    padding-bottom: 0rem;
+}
+
+.footer_wrapper ul li {
+    margin-bottom: 0.5rem;
+    list-style: none;
+}
+
+.footer_wrapper .company_details {
+    font-size: 1.4rem;
+}
+
+.footer_wrapper .contact-info li a {
+    font-size: 1.6rem;
+    color: var(--text-grey);
+    text-decoration: none;
+}
+
+.footer_wrapper .link-widget li a,
+.footer_wrapper p {
+    color: var(--text-grey);
+    font-size: 1.6rem;
+    padding-left: 1.5rem;
+    position: relative;
+    transition: all 0.3s ease-out;
+}
+
+.footer_wrapper .link-widget li a::before {
+    content: '\f105';
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    position: absolute;
+    left: 0;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.footer_wrapper .link-widget li a:hover {
+    color: var(--secondary-color);
+    padding-left: 2.5rem;
+}
+
+.footer_wrapper .social-network a {
+    width: 3.5rem;
+    height: 3.5rem;
+    line-height: 3.2rem;
+    margin: 0.5rem;
+    display: inline-block;
+    text-align: center;
+    border-radius: 100%;
+    color: var(--text-grey);
+    border: 0.125rem solid var(--text-grey);
+    transition: all 0.3s cubic-bezier(0.645, 0.045, 0.355, 1);
+}
+
+.footer_wrapper .social-network a:hover {
+    border-color: var(--secondary-color);
+    background-color: var(--secondary-color);
+    color: var(--text-white);
+    box-shadow: 0 0.625rem 0.9375rem rgba(0, 0, 0, 0.1);
+    transform: translateY(-0.1875rem);
+}
+.footer_wrapper .form-control {
+    font-size: 2rem;
+    color: var(--text-white);
+    background-color: transparent;
+    border: 1px solid var(--secondary-color);
+}
+
+.footer_wrapper .form-control:focus {
+    outline: none;
+    box-shadow: none;
+    border-color: var(--secondary-color);
+}
+
+.footer_wrapper .copyright-section {
+    background-color: var(--secondary-color);
+    text-align: center;
+    margin-top: 5rem;
+}
+
+.footer_wrapper .copyright-section p {
+    margin: 0;
+    line-height: 1.5;
+    padding: 3rem 0;
+    font-size: 1.4rem;
+    color: var(--text-white);
+}
+
+.footer_wrapper .copyright-section a {
+    color: var(--primary-text);
+    font-weight: 600;
+    text-decoration: none;
+}
