--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ html {
     font-family: var(--primary-font);
     scroll-behavior: smooth;
     line-height: 1.5;
+    background-color: black;
 }
 
 h1,
@@ -377,4 +378,63 @@ section{
     color: var(--primary-text);
     font-weight: 600;
     text-decoration: none;
+}
+
+.heading {
+    text-align: center;
+    margin-bottom: 5rem;
+    padding-left: 46rem;
+}
+.products .box-container{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+}
+
+.products .box-container .box{
+    flex: 1 1 30rem;
+    box-shadow: 0 .5rem 1.5rem rgba(0,0,0,.1);
+    border-radius: .5rem;
+    border: 0.1rem solid rgba(0,0,0,.1);
+    position: relative;
+}
+
+.products .box-container .box .discount{
+    position: absolute;
+    top: 1rem; left: 1rem;
+    padding: .7rem 1rem;
+    font-size: 2rem;
+    color: #555;
+    background: rgba(255,51,153,0.05);
+    z-index: 1;
+    border-radius: .5rem;
+}
+.products .box-container .box .image{
+    position: relative;
+    text-align: center;
+    padding-top: 2rem;
+    overflow: hidden;
+}
+.products .box-container .box .image img{
+    height: 25rem;
+}
+.products .box-container .box:hover .image img{
+    transform: scale(1.1);
+}
+
+.products .box-container .box .content{
+    padding: 2rem;
+    text-align: center;
+}
+
+.products .box-container .box .content h3{
+    font-size: 1.3rem;
+    color: #333;
+}
+
+.products .box-container .box .content .price{
+    font-size: 2rem;
+    color: #333;
+    font-weight: bolder;
+    padding-top: 2rem;
 }
