--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ section{
 
 .home {
     background: url(Black.jpg);
+    filter: blur(0.5rem);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
