--- a/style.css
+++ b/style.css
@@ -281,6 +281,83 @@ section{
     min-height: 90vh;
 
 }
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+  
+.slider_section {
+    background-color: black;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+}
+  
+.container {
+    width: 100%;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+  
+/* h2 {
+    color: #ffffff;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: center;
+    margin: 40px;
+    font-size: 5rem;
+    font-weight: 400;
+} */
+  
+.sliders {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    padding: 20px 0;
+}
+  
+.sliders div {
+    height: 500px;
+    width: 120px;
+    border-radius: 10px;
+    border: 2px solid #fff;
+    background-size: cover;
+    cursor: pointer;
+    transition: width 0.5s ease;
+}
+  
+.sliders div:hover {
+    width: 400px;
+}
+  
+.div1 {
+    background-image: url(/div_images/div1.jpg);
+    background-position: center;
+}
+  
+.div2 {
+    background-image: url(/div_images/div2.jpg);
+    background-position: center;
+}
+  
+.div3 {
+    background-image: url(/div_images/div3.jpg);
+    background-position: center;
+}
+  
+.div4 {
+    background-image: url(/div_images/div4.jpg);
+    background-position: center;
+}
+  
+.div5 {
+    background-image: url(/div_images/div5.jpg);
+    background-position: center;
+}
+.div6 {
+    background-image: url(Black.jpg);
+    background-position: center;
+}
 
 .footer_wrapper {
     background: url(footer.png) no-repeat top center;
